# learngram

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.claude/: launch.json
apps/web/: package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/graph/: page.tsx
apps/web/app/ingest/: page.tsx
apps/web/components/: feed-card.tsx  graph-view.tsx  topic-tabs.tsx
apps/web/components/layout/: bottom-nav.tsx  nav-rail.tsx  right-sidebar.tsx
apps/web/components/ui/: button.tsx
apps/web/lib/: utils.ts
db/: docker-compose.yml
db/migrations/: 0001_init.sql  0002_proposals.sql  0003_card_formats.sql  0004_document_chunks.sql  0005_upload_source.sql  0006_ingest_jobs.sql  0007_flexible_topics.sql  0008_card_feedback.sql  0009_personas.sql  0010_documents_processed.sql
db/seed/: 0001_system_design.sql
services/api/: pyproject.toml
services/api/src/learngram_api/: main.py  models.py
services/api/src/learngram_api/routes/: feed.py  feedback.py  graph.py  health.py  ingest.py
services/ingestion/: pyproject.toml
services/ingestion/src/learngram_ingestion/: embed.py  extract.py  generate.py  graph_ops.py  ingest_file.py  personas.py  pipeline.py  retrieval.py  review.py  text_utils.py  tune_analogies.py
services/ingestion/src/learngram_ingestion/prompts/: analogy_system.md
services/ingestion/src/learngram_ingestion/sources/: blogs.py  primer.py
services/shared/: pyproject.toml
services/shared/src/learngram_shared/: __init__.py  config.py  vectors.py
services/shared/src/learngram_shared/db/: migrate.py  pool.py  seed.py
services/shared/src/learngram_shared/embeddings/: base.py  factory.py  gemini.py  ollama.py
services/shared/src/learngram_shared/llm/: base.py  factory.py  gemini.py  ollama.py
