[project]
name = "learngram-ingestion"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "trafilatura>=1.12",
    "beautifulsoup4>=4.12",
    "rich>=13.0",
    "markitdown[pdf,docx,pptx]>=0.0.1a2",
    "learngram-shared",
]

[project.scripts]
ingest-primer = "learngram_ingestion.sources.primer:main"
ingest-blogs  = "learngram_ingestion.sources.blogs:main"
extract       = "learngram_ingestion.extract:main"
review        = "learngram_ingestion.review:main"
embed         = "learngram_ingestion.embed:main"
generate      = "learngram_ingestion.generate:main"
generate-posts = "learngram_ingestion.personas:main"
ingest-file   = "learngram_ingestion.ingest_file:main"
tune-analogies = "learngram_ingestion.tune_analogies:main"

[tool.uv.sources]
learngram-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/learngram_ingestion"]
