[project]
name = "learngram-shared"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
gemini = ["google-genai>=1.0"]
ollama = ["httpx>=0.27"]
all = ["google-genai>=1.0", "httpx>=0.27"]

[project.scripts]
migrate = "learngram_shared.db.migrate:main"
seed = "learngram_shared.db.seed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/learngram_shared"]
